// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BalanceCard Test Test Snapshot Test Snapshot 1`] = `
<Styled(Card)
  extra={
    <ExtendExtraDiv
      account="0x0"
      accountShow="Unknown"
      locale="EN"
    />
  }
  margin="20px 0 0 0"
  title={
    <styled.div>
      BALANCE
       
      <Styled(Button)
        icon="reload"
        onClick={[MockFunction]}
      />
    </styled.div>
  }
  width="100%"
>
  <styled.div
    horizontal={false}
    padding="0 10px"
  >
    <BalanceInfo
      icon={null}
      mobile={true}
      name="ETH"
      value={0}
    />
    <BalanceInfo
      icon={null}
      mobile={true}
      name="aETH"
      value={0}
    />
    <BalanceInfo
      icon={null}
      mobile={true}
      name="bETH"
      value={0}
    />
  </styled.div>
</Styled(Card)>
`;

exports[`BalanceCard Test Test Snapshot Test Snapshot 2`] = `
<Styled(Card)
  extra={
    <ExtendExtraDiv
      account="0x0"
      accountShow="Unknown"
      locale="EN"
    />
  }
  margin="0 0 0 10px"
  title={
    <styled.div>
      BALANCE
       
      <Styled(Button)
        icon="reload"
        onClick={[MockFunction]}
      />
    </styled.div>
  }
  width="590px"
>
  <styled.div
    horizontal={true}
    padding="0 10px"
  >
    <BalanceInfo
      icon={null}
      mobile={false}
      name="ETH"
      value={0}
    />
    <BalanceInfo
      icon={null}
      mobile={false}
      name="aETH"
      value={0}
    />
    <BalanceInfo
      icon={null}
      mobile={false}
      name="bETH"
      value={0}
    />
  </styled.div>
</Styled(Card)>
`;
